v3/api/keyfactor/v2/README.md
# Go API client for Keyfactor Command (API Version V2)

<p>This page provides a utility through which the Keyfactor API endpoints can be called and results returned. 
                                                        It is intended to be used primarily for validation, testing and workflow development. 
                                                        It also serves secondarily as documentation for the API.</p>
                                                        <p>If you would like to view documentation containing details on the Keyfactor API and endpoints, 
                                                        please refer to the Web API section of the Keyfactor Command documentation.</p>

## Overview
This API client was generated by the [OpenAPI Generator](https://openapi-generator.tech) project.  By using the [OpenAPI-spec](https://www.openapis.org/) from a remote server, you can easily generate an API client.

- Keyfactor Command API Version: 24.4.2
- API version: 2
- Package version: 1.0.0
- OpenAPI Generator Version: 7.12.0
- Build package: org.openapitools.codegen.languages.GoClientCodegen

For more information on the Keyfactor Command API Documentation, please visit [here](https://software.keyfactor.com/Core-OnPrem/Current/Content/WebAPI/Overview.htm).

For more information on OpenAPI Generator, please visit [its documentation](https://openapi-generator.tech/).

## Installation

Install the following dependencies:

```shell
go get "github.com/Keyfactor/keyfactor-go-client-sdk/v3"
```

Put the package under your project folder and add the following in import:

```golang
import "github.com/Keyfactor/keyfactor-go-client-sdk/v3/api/keyfactor/v2"
```

## Configuration

Configuration of the API client is done through the [github.com/Keyfactor/keyfactor-auth-client-go/auth_providers](https://github.com/Keyfactor/keyfactor-auth-client-go) Go package.

Here is an example of configuring your API client:

```go
import (
	"os"
	"github.com/Keyfactor/keyfactor-auth-client-go/auth_providers"
	"github.com/Keyfactor/keyfactor-go-client-sdk/v3/api/keyfactor/v2"
)

hostname := os.Getenv(auth_providers.EnvKeyfactorHostName)
apiPath := os.Getenv(auth_providers.EnvKeyfactorAPIPath)

clientId := os.Getenv(auth_providers.EnvKeyfactorClientID)
clientSecret := os.Getenv(auth_providers.EnvKeyfactorClientSecret)
tokenUrl := os.Getenv(auth_providers.EnvKeyfactorAuthTokenURL)

oAuthNoParamsConfig := auth_providers.CommandConfigOauth{}
oAuthNoParamsConfig.CommandAuthConfig.
	WithCommandHostName(hostname).
	WithCommandAPIPath(apiPath).
	WithSkipVerify(false).
	WithClientTimeout(10)
oAuthNoParamsConfig.
	WithClientId(clientId).
	WithClientSecret(clientSecret).
	WithTokenUrl(tokenUrl).
	Authenticate()

// Configure API client
client, err := kf.NewAPIClient(oAuthNoParamsConfig.GetServerConfig())
```

## Documentation for API Endpoints

All URIs are relative to *http://keyfactor.example.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CertificateApi* | [**GetCertificatesIdentityAuditById**](docs/CertificateApi.md#getcertificatesidentityauditbyid) | **Get** /Certificates/IdentityAudit/{id} | Audit identity permissions for certificate
*EnrollmentApi* | [**CreateEnrollmentPFX**](docs/EnrollmentApi.md#createenrollmentpfx) | **Post** /Enrollment/PFX | Performs a PFX Enrollment based upon the provided request
*PAMProviderApi* | [**CreatePamProviders**](docs/PAMProviderApi.md#createpamproviders) | **Post** /PamProviders | Creates a new PAM provider with the associated properties
*PAMProviderApi* | [**CreatePamProvidersTypes**](docs/PAMProviderApi.md#createpamproviderstypes) | **Post** /PamProviders/Types | Creates a new PAM provider type with the associated properties
*PAMProviderApi* | [**DeletePamProvidersById**](docs/PAMProviderApi.md#deletepamprovidersbyid) | **Delete** /PamProviders/{id} | Deletes a PAM Provider
*PAMProviderApi* | [**GetPamProviders**](docs/PAMProviderApi.md#getpamproviders) | **Get** /PamProviders | Returns all PAM providers according to the provided filter and output parameters
*PAMProviderApi* | [**GetPamProvidersById**](docs/PAMProviderApi.md#getpamprovidersbyid) | **Get** /PamProviders/{id} | Returns a single PAM Provider that matches the associated id
*PAMProviderApi* | [**GetPamProvidersTypes**](docs/PAMProviderApi.md#getpamproviderstypes) | **Get** /PamProviders/Types | Returns all PAM provider types in the Keyfactor instance
*PAMProviderApi* | [**GetPamProvidersTypesById**](docs/PAMProviderApi.md#getpamproviderstypesbyid) | **Get** /PamProviders/Types/{id} | Returns PAM provider Type for a specific PAM provider
*PAMProviderApi* | [**UpdatePamProviders**](docs/PAMProviderApi.md#updatepamproviders) | **Put** /PamProviders | Updates an existing PAM provider according to the provided properties
*SecurityRolesApi* | [**CreateSecurityRoles**](docs/SecurityRolesApi.md#createsecurityroles) | **Post** /Security/Roles | Adds a new security role to the system.
*SecurityRolesApi* | [**GetSecurityRoles**](docs/SecurityRolesApi.md#getsecurityroles) | **Get** /Security/Roles | Returns all security roles according to the provided filter and output parameters.
*SecurityRolesApi* | [**GetSecurityRolesById**](docs/SecurityRolesApi.md#getsecurityrolesbyid) | **Get** /Security/Roles/{id} | Returns a single security role that matches the id.
*SecurityRolesApi* | [**UpdateSecurityRoles**](docs/SecurityRolesApi.md#updatesecurityroles) | **Put** /Security/Roles | Updates an existing security role.
*UserApi* | [**GetSSHUsers**](docs/UserApi.md#getsshusers) | **Get** /SSH/Users | Returns users matching the criteria from the provided query parameters
*UserApi* | [**GetSSHUsersById**](docs/UserApi.md#getsshusersbyid) | **Get** /SSH/Users/{id} | Looks up information about an existing SSH user.


## Documentation For Models

 - [CSSCMSCoreEnumsClaimType](docs/CSSCMSCoreEnumsClaimType.md)
 - [CSSCMSDataModelEnumsPamParameterDataType](docs/CSSCMSDataModelEnumsPamParameterDataType.md)
 - [CSSCMSDataModelModelsPkcs12CertificateResponse](docs/CSSCMSDataModelModelsPkcs12CertificateResponse.md)
 - [CSSCMSDataModelModelsProviderType](docs/CSSCMSDataModelModelsProviderType.md)
 - [CSSCMSDataModelModelsProviderTypeParam](docs/CSSCMSDataModelModelsProviderTypeParam.md)
 - [CSSCMSDataModelModelsSSHKeysKeyResponse](docs/CSSCMSDataModelModelsSSHKeysKeyResponse.md)
 - [CSSCMSDataModelModelsSSHLogonsLogonResponse](docs/CSSCMSDataModelModelsSSHLogonsLogonResponse.md)
 - [CSSCMSDataModelModelsSSHServersServerResponse](docs/CSSCMSDataModelModelsSSHServersServerResponse.md)
 - [CSSCMSDataModelModelsSSHUsersSshUserAccessResponse](docs/CSSCMSDataModelModelsSSHUsersSshUserAccessResponse.md)
 - [CSSCMSDataModelModelsSSHUsersSshUserResponse](docs/CSSCMSDataModelModelsSSHUsersSshUserResponse.md)
 - [CertificatesCertificateIdentityAuditResponse2](docs/CertificatesCertificateIdentityAuditResponse2.md)
 - [CertificatesCertificateIdentityAuditResponse2CertificatePermission](docs/CertificatesCertificateIdentityAuditResponse2CertificatePermission.md)
 - [CertificatesCertificateIdentityAuditResponse2IdentityProvider](docs/CertificatesCertificateIdentityAuditResponse2IdentityProvider.md)
 - [CertificatesCertificateIdentityAuditResponse2IdentityResponse](docs/CertificatesCertificateIdentityAuditResponse2IdentityResponse.md)
 - [EnrollmentManagementStoreRequest](docs/EnrollmentManagementStoreRequest.md)
 - [EnrollmentPFXEnrollmentManagementResponse](docs/EnrollmentPFXEnrollmentManagementResponse.md)
 - [EnrollmentPFXEnrollmentWithStoresRequest](docs/EnrollmentPFXEnrollmentWithStoresRequest.md)
 - [KeyfactorCommonQueryableExtensionsSortOrder](docs/KeyfactorCommonQueryableExtensionsSortOrder.md)
 - [KeyfactorCommonSchedulingKeyfactorSchedule](docs/KeyfactorCommonSchedulingKeyfactorSchedule.md)
 - [KeyfactorCommonSchedulingModelsIntervalModel](docs/KeyfactorCommonSchedulingModelsIntervalModel.md)
 - [KeyfactorCommonSchedulingModelsMonthlyModel](docs/KeyfactorCommonSchedulingModelsMonthlyModel.md)
 - [KeyfactorCommonSchedulingModelsTimeModel](docs/KeyfactorCommonSchedulingModelsTimeModel.md)
 - [KeyfactorCommonSchedulingModelsWeeklyModel](docs/KeyfactorCommonSchedulingModelsWeeklyModel.md)
 - [PAMPamProviderTypeParamValueResponse](docs/PAMPamProviderTypeParamValueResponse.md)
 - [PAMProviderCreateRequest](docs/PAMProviderCreateRequest.md)
 - [PAMProviderCreateRequestProviderType](docs/PAMProviderCreateRequestProviderType.md)
 - [PAMProviderCreateRequestProviderTypeParam](docs/PAMProviderCreateRequestProviderTypeParam.md)
 - [PAMProviderCreateRequestTypeParamValue](docs/PAMProviderCreateRequestTypeParamValue.md)
 - [PAMProviderResponse](docs/PAMProviderResponse.md)
 - [PAMProviderTypeCreateRequest](docs/PAMProviderTypeCreateRequest.md)
 - [PAMProviderTypeParameterCreateRequest](docs/PAMProviderTypeParameterCreateRequest.md)
 - [PAMProviderTypeParameterResponse](docs/PAMProviderTypeParameterResponse.md)
 - [PAMProviderTypeResponse](docs/PAMProviderTypeResponse.md)
 - [PAMProviderUpdateRequest](docs/PAMProviderUpdateRequest.md)
 - [SecurityRoleClaimDefinitionsRoleClaimDefinitionProviderResponse](docs/SecurityRoleClaimDefinitionsRoleClaimDefinitionProviderResponse.md)
 - [SecurityRoleClaimDefinitionsRoleClaimDefinitionRequest](docs/SecurityRoleClaimDefinitionsRoleClaimDefinitionRequest.md)
 - [SecurityRoleClaimDefinitionsRoleClaimDefinitionResponse](docs/SecurityRoleClaimDefinitionsRoleClaimDefinitionResponse.md)
 - [SecuritySecurityRolesSecurityRoleCreationRequest](docs/SecuritySecurityRolesSecurityRoleCreationRequest.md)
 - [SecuritySecurityRolesSecurityRoleQueryResponse](docs/SecuritySecurityRolesSecurityRoleQueryResponse.md)
 - [SecuritySecurityRolesSecurityRoleResponse](docs/SecuritySecurityRolesSecurityRoleResponse.md)
 - [SecuritySecurityRolesSecurityRoleUpdateRequest](docs/SecuritySecurityRolesSecurityRoleUpdateRequest.md)
 - [SystemDayOfWeek](docs/SystemDayOfWeek.md)


## Documentation for Utility Methods

Due to the fact that model structure members are all pointers, this package contains
a number of utility functions to easily obtain pointers to values of basic types.
Each of these functions takes a value of the given basic type and returns a pointer to it:

* `PtrBool`
* `PtrInt`
* `PtrInt32`
* `PtrInt64`
* `PtrFloat`
* `PtrFloat32`
* `PtrFloat64`
* `PtrString`
* `PtrTime`

## Author



